--- a/package.json
+++ b/package.json
@@ -9,9 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.8",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@types/axios": "^0.14.0",
+    "@types/react-modal": "^3.13.1",
+    "@types/react-redux": "^7.1.24",
+    "@types/styled-components": "^5.1.26",
+    "axios": "^0.27.2",
+    "framer-motion": "^7.2.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.8",
+    "sass": "^1.54.5",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "18.7.9",
