--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
     "react-toastify": "^9.0.8",
     "sass": "^1.54.5",
     "styled-components": "^5.3.5"
