--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postcheckout": "./node_modules/.bin/build-ignore"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -32,6 +31,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.18.0",
     "@types/node": "18.7.9",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
